--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
   "version": "1.0.0",
 
   "scripts": {
-  
+
     "android": "expo start --android",
     "ios": "expo start --ios",
     "start": "expo start",
+    "tunnel": "expo start --tunnel",
     "prebuild": "expo prebuild",
-  
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "web": "expo start --web"
   },
   "dependencies": {
-      "nativewind": "latest",
-      "react-native-reanimated": "3.16.2",
-      "react-native-safe-area-context": "4.12.0",
+    "nativewind": "latest",
+    "react-native-reanimated": "3.16.2",
+    "react-native-safe-area-context": "4.12.0",
     "expo": "^52.0.7",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
@@ -30,19 +30,14 @@
     "eslint": "^8.57.0",
     "eslint-config-universe": "^12.0.1",
     "prettier": "^3.2.5",
-    
-      "tailwindcss": "^3.4.0",
-      "prettier-plugin-tailwindcss": "^0.5.11",
-    
-    
+    "tailwindcss": "^3.4.0",
+    "prettier-plugin-tailwindcss": "^0.5.11",
     "typescript": "~5.3.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
     "root": true
   },
-  
     "main": "node_modules/expo/AppEntry.js",
-  
   "private": true
 }
