--- a/package.json
+++ b/package.json
@@ -1,9 +1,7 @@
 {
   "name": "my-expo-app",
   "version": "1.0.0",
-
   "scripts": {
-
     "android": "expo start --android",
     "ios": "expo start --ios",
     "start": "expo start",
@@ -20,7 +18,11 @@
     "expo": "^52.0.7",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.9"
+    "react-native": "0.76.9",
+    "expo-router": "~4.0.20",
+    "react-native-screens": "~4.4.0",
+    "expo-linking": "~7.0.5",
+    "expo-constants": "~17.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -38,6 +40,6 @@
     "extends": "universe/native",
     "root": true
   },
-    "main": "node_modules/expo/AppEntry.js",
+  "main": "expo-router/entry",
   "private": true
 }
