fix: Tailwind classes
Somehow i had messed up the tailwind configuration before, I removed the Nativewind template code and it messed up some configuration in the last commit. Now it works nice.

--- a/app.json
+++ b/app.json
@@ -4,6 +4,7 @@
     "slug": "my-expo-app",
     "version": "1.0.0",
     "scheme": "my-expo-app",
+    "newArchEnabled": true,
     "web": {
       "favicon": "./assets/favicon.png"
     },
