--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,19 +2,10 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
-    "jsx": "react-jsx"
-    
-      ,
+    "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
-        
-        
-        "~/*": ["src/*"]
-        
-      
+      "~/*": ["src/*"]
     }
-    
-  
-    }
-  
+  }
 }
